Piccole modifiche da completare

--- a/ACT_Report/bibliography.bib
+++ b/ACT_Report/bibliography.bib
@@ -11,7 +11,6 @@
   OPTnote = 	 {},
   OPTannote = 	 {}
 }
-
 @Online{CITATION:2,
   author =   {Stanford},
   title =    {Softmax Regression},
@@ -21,9 +20,24 @@
   OPTvolume =    {5},
   OPTnumber =    {},
   OPTpages =   {},
-  url = {http://ufldl.stanford.edu/tutorial/supervised/SoftmaxRegression/},
   OPTmonth =   {},
   OPTnote =    {},
-  OPTannote =    {}
+  OPTannote =    {},
+  note = {Available at \url{http://ufldl.stanford.edu/tutorial/supervised/SoftmaxRegression/}}
+}
+@Online{CITATION:3,
+  author =   {Wikipedia},
+  title =    {Multinomial Logistic Regression},
+  journal =    {},
+  year =   {},
+  OPTkey =   {},
+  OPTvolume =    {5},
+  OPTnumber =    {},
+  OPTpages =   {},
+  OPTmonth =   {},
+  OPTnote =    {},
+  OPTannote =    {},
+  note = {Available at \url{https://en.wikipedia.org/wiki/Multinomial_logistic_regression}}
+}
 }
 
