--- a/ACT_Report/main.tex
+++ b/ACT_Report/main.tex
@@ -67,7 +67,7 @@ Several graphs are plotted in order to see the graph of communicating agents, ho
 \addcontentsline{toc}{chapter}{Introduction}
 
 \section*{Motivations}
-In the past there was a single \textit{Mainframe} that executed all digital computations. Years after, with the creation of the Personal Computer, more people could execute the same operations in private. Today's \textit{Microcontrollers} allow to make smart an infinity of devices. More algorithms have been created to connect these devices to distribute.\\
+In the past there was a single \textit{Mainframe} that executed all digital computations. Years after, with the creation of the Personal Computer, more people could execute the same operations in private. Today's \textit{Microcontrollers} allow to make smart all the of devices. More algorithms have been created to connect these devices to distribute.\\
  In general, this approach is useful because it allows cooperation between agents, to reach a common goal. In this case, the ability to split the workload in to several agents guarantees faster execution times.
 The Multinomial Logistic Regression generalizes the logistic regression for a multiclass problem, with more than two possible discrete outcomes, where each observation has several features.
 
@@ -75,9 +75,15 @@ The Multinomial Logistic Regression generalizes the logistic regression for a mu
 This work implements a scenario in which there are some agents that estimate a cost function using their own information and those of other agents; they use a \textit{Distributed Sub-gradient Method} to update their own estimate and, in particular, they resolve a \textit{Multinomial Logistic Regression} problem.\\
 
 The first step was to create a MATLAB script that solves a quadratic optimization problem using a gradient method. In this script it has been \textit{simulated} a distributed approach in order to test the effectiveness of the method saw in Distributed Subgradient Methods for Multi-Agent Optimization \cite{CITATION:1}. MATLAB was only used in the prototype phase, because it doesn't allow real parallel computations. After the confirmation that the approach was working, it started the implementation of the algorithm in Python3 using the Message Passing Interface.\\
-The quadratic form used was SCRIVERE FORMULA \\
+The quadratic form used was 
+\begin{equation} \tag{I}
+x^{T}Qx + r^{T}x
+\end{equation}. \\
 This form was used only to test the convergence of the method.\\
-After established that, considering that the Supervised Learning problem known as Multinomial Logistic Regression gives as output a probability value for every considered class, it was necessary to implement the softmax function. SCRIVERE FORMULA \cite{CITATION:3}. \\
+After established that, considering that the Supervised Learning problem known as Multinomial Logistic Regression gives as output a probability value for every considered class, it was necessary to implement the softmax function. 
+\begin{equation} \tag{II}
+g_i\left(\theta\right):=\sum_{k=1}^{K}{1\{y^{(i)}=e_k\}\log{\left( \frac{exp(\theta^{(k)^\top}x^{(i)})}{\sum_{k=1}^{K}{exp( \theta^{(j)^\top}x )}} \right)}}
+\end{equation} \cite{CITATION:3}. \\
 The formula saw in \ref{EQ1.7} was minimized in a centralized setup using MATLAB, and the result was compared to the one of the Python distributed program.\\
 It was seen that the algorithm was converging, several tests were executed to find the optimal values for the step-size.\\
 The present work is divided into two chapters. In Chapter \ref{Cap1}, it is introduced the theory behind the problem and it is visualized and commented the implementation code. In Chapter \ref{Cap2} there are the results of simulations with some considerations.
